experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/417/report-417/jadx/output.txt
Test.java:12: error: variable i3 might not have been initialized
        this.vMeth_check_sum += i + i3;
                                    ^
1 error
